<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pl.universalcopy.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        android:gravity="center"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:subtitleTextColor="@color/white"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <RelativeLayout
        android:id="@+id/total_switch_rl"
        android:duplicateParentState="false"
        android:layout_below="@id/toolbar"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/total_switch_tv"
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/total_switch" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/total_switch_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/notify_rl"
        android:duplicateParentState="false"
        android:layout_below="@id/total_switch_rl"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/notify_tv"
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/notify" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/notify_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/key_trigger_rl"
        android:duplicateParentState="false"
        android:layout_below="@id/notify_rl"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/key_trigger_tv"
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/key_trigger" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/key_trigger_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/long_key_trigger_rl"
        android:duplicateParentState="false"
        android:layout_below="@id/key_trigger_rl"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/long_key_trigger_tv"
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/long_key_trigger" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/long_key_trigger_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/guide_rl"
        android:duplicateParentState="false"
        android:layout_below="@id/key_trigger_rl"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/guide"
            android:textColor="@color/text_color_import"
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/introduction" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/donate_rl"
        android:duplicateParentState="false"
        android:layout_below="@id/key_trigger_rl"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/donate"
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/donate" />

    </RelativeLayout>



</LinearLayout>
